# dbt-af

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dbt_project.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/send-cancelled-message/: action.yml
.github/actions/send-failed-message/: action.yml
.github/workflows/: all_tests_on_pr.yml  integational_tests.yml  integration_tests.yml  integrational_tests.yml  pr-info-comment.yml  release.yml  test_code_style.yml  tests.yml
dbt_af/: __init__.py  dags.py
dbt_af/builder/: __init__.py  backfill_dag_components.py  dag_components.py  dbt_af_builder.py  dbt_model_path_graph_builder.py  domain_dag.py  maintenance_dag_components.py  task_dependencies.py
dbt_af/common/: af_callbacks.py  af_scheduling_utils.py  constants.py  cron.py  scheduling.py  utils.py
dbt_af/conf/: __init__.py  config.py
dbt_af/integrations/af_callbacks/: __init__.py  callbacks.py
dbt_af/integrations/mcd/: __init__.py  callbacks.py  dbt_core.py
dbt_af/integrations/tableau/: __init__.py  auth.py  exceptions.py  extracts.py
dbt_af/operators/: base.py  branch.py  kubernetes_pod.py  macros.py  run.py  sensors.py  supplemental.py  venv.py
dbt_af/parser/: dbt_node_model.py  dbt_profiles.py  dbt_source_model.py
dbt_af_functional_tests/: __init__.py  conftest.py  main.py  test_af_wait_name_too_long.py  test_all_dbt_models_exist.py  test_dbt_node_model.py  test_dbt_nodes_general_constrains.py  test_kubernetes_profiles.py
docs/: docs.md
examples/: .env  .gitignore  Dockerfile  Dockerfile3  README.md  advanced_project.md  basic_project.md  dependencies_management.md  docker-compose.yaml  docker-compose3.yaml  extras_and_scripts.md  integration_with_other_tools.md  kubernetes_tasks.md  maintenance_and_source_freshness.md  manage-airflow.sh  manual_scheduling.md  python_venv_tasks.md  using_docker_compose.md
examples/dags/: .gitignore  .user.yml  build_manifest.sh  dbt_project.yml  example_advanced_dbt_af_dag.py  example_dbt_af_dag.py  profiles.yml
examples/dags/advanced_jaffle_shop/dbt/models/dmn_jaffle_analytics/ods/: dmn_jaffle_analytics.ods.customers.sql  dmn_jaffle_analytics.ods.customers.yml  dmn_jaffle_analytics.ods.customers_scd.yml  dmn_jaffle_analytics.ods.ingest_venv.py  dmn_jaffle_analytics.ods.ingest_venv.yml  dmn_jaffle_analytics.ods.orders.sql  dmn_jaffle_analytics.ods.orders.yml  dmn_jaffle_analytics.overview.md  docs.md
examples/dags/advanced_jaffle_shop/dbt/models/dmn_jaffle_shop/: dmn_jaffle_shop.overview.md  docs.md
examples/dags/advanced_jaffle_shop/dbt/models/dmn_jaffle_shop/ods/: dmn_jaffle_shop.ods.customers.yml  dmn_jaffle_shop.ods.orders.yml
examples/dags/advanced_jaffle_shop/dbt/models/dmn_jaffle_shop/staging/: dmn_jaffle_shop.stg.customers.sql  dmn_jaffle_shop.stg.customers.yml  dmn_jaffle_shop.stg.orders.sql  dmn_jaffle_shop.stg.orders.yml  dmn_jaffle_shop.stg.payments.sql  dmn_jaffle_shop.stg.payments.yml
examples/dags/jaffle_shop/: .gitignore  build_manifest.sh
examples/dags/jaffle_shop/dbt/models/svc_jaffle_shop/: customers.sql  orders.sql  schema.yml
examples/dags/jaffle_shop/dbt/models/svc_jaffle_shop/staging/: schema.yml  svc_jaffle_shop.stg.customers.sql  svc_jaffle_shop.stg.orders.sql  svc_jaffle_shop.stg.payments.sql
examples/dags/macros/: deduplication.sql  persist_docs.sql  table_maintenance.sql
macros/increment/: docs.yml  increment_helpers.sql  period_locker.sql
macros/montecarlo/: airflow_query_comment.sql
scripts/: mini_dbt_project_generator.py
tests/: conftest.py  dagger.json  docker-compose.yml  init_test_db.sql  test_dbt_node_model.py  test_dbt_profiles.py  test_dbt_source_model.py  test_retry_conf.py  test_scheduling_tags.py  test_sensors_wait_fns.py
tests/.dagger/: pyproject.toml
tests/.dagger/src/integration_tests/: __init__.py  main.py
tests/.dagger/src/integrational_tests/: __init__.py  main.py
tests/airflow_dags/: conftest.py  pyproject.toml  test_dag_build.py
tests/airflow_dags/fixtures/domain_depends_on_another_partially/: models.yml
tests/airflow_dags/fixtures/domain_depends_on_another_partially/models/b/cdm/: b1.sql  b2.sql
tests/airflow_dags/fixtures/domain_depends_on_another_with_multischeduling/: models.yml
tests/airflow_dags/fixtures/domain_depends_on_another_with_multischeduling/models/a/ods/: a2.sql
tests/airflow_dags/fixtures/domain_depends_on_another_with_multischeduling/models/a/raw/: a1.sql
tests/airflow_dags/fixtures/domain_depends_on_another_with_test/: models.yml
tests/airflow_dags/fixtures/domain_depends_on_two_domains/: models.yml
tests/airflow_dags/fixtures/domain_model_w_maintenance/: models.yml
tests/airflow_dags/fixtures/domain_w_enable_disable_models/: models.yml
tests/airflow_dags/fixtures/domain_w_shift/: models.yml
tests/airflow_dags/fixtures/domain_w_source_freshness/: models.yml
tests/airflow_dags/fixtures/domain_w_task_in_kubernetes/: models.yml
tests/airflow_dags/fixtures/domain_w_task_in_venv/: models.yml
tests/airflow_dags/fixtures/domain_with_different_schedule/: models.yml
tests/airflow_dags/fixtures/hourly_task_with_tests/: models.yml
tests/airflow_dags/fixtures/independent_domains/: models.yml
tests/airflow_dags/fixtures/sequential_domains/: models.yml
tests/airflow_dags/fixtures/sequential_tasks_in_one_domain/: models.yml
tests/airflow_dags/fixtures/task_depends_on_two_within_same_domain/: models.yml
tests/airflow_dags/fixtures/task_with_tableau_integration/: models.yml
tests/airflow_dags/fixtures/two_domains_depend_on_another/: models.yml
tests/airflow_dags/fixtures/two_domains_depend_on_two/: models.yml
tests/airflow_dags/fixtures/two_domains_with_diff_scheduling_and_shifts/: models.yml
tests/airflow_dags/fixtures/two_tasks_depend_on_one/: models.yml
tests/airflow_dags/fixtures/two_tasks_depend_on_two/: models.yml
tests/airflow_dags/fixtures/two_tasks_depend_on_two_w_snapshot/: models.yml
(+47 files in other folders)
