[project]
name = "dbt-af"
dynamic = ["version"]
description = "Distibuted dbt runs on Apache Airflow"
authors = [
    { name = "Nikita Yurasov", email = "nikitayurasov@toloka.ai" },
    { name = "Igor Safonov", email = "igsaf@toloka.ai" },
    { name = "Evgeny Ermakov", email = "jkermakov@toloka.ai" },
    { name = "Leonid Kozhinov", email = "lkozhinov@toloka.ai" }
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Toloka/dbt-af"
repository = "https://github.com/Toloka/dbt-af"
documentation = "https://github.com/Toloka/dbt-af/blob/main/examples/README.md"
keywords = ["python", "airflow", "dbt"]
requires-python = ">=3.10,<3.13"

dependencies = [
    "attrs >=23.1",
    "apache-airflow >=2.6,<3",
    "apache-airflow-providers-cncf-kubernetes >=7.0.0",
    "pydantic >=1.10,<3.0.0",
    "cachetools >=5.3,<7",
    "croniter >=3.0",
    "typer >=0.9",
    "dbt-core >=1.7,<2",
    "packaging >=21.0",
    "virtualenv >=20.27.0", # https://github.com/pypa/virtualenv/pull/2782
    "pytest >=7.4.0",
    "pytest-env >=1.0.0",
]

[tool.hatch.version]
path = "dbt_af/__init__.py"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-env==1.1.5",
    "pytest-cov==4.1.0",
    "dbt-postgres>=1.7.0,<2",
    "psycopg2-binary>=2.9.0,<2.10; sys_platform == 'linux'",
    "ipython==8.37.0",
    "freezegun>=1.5.1,<1.6.0",
    { include-group = "lint" },
    { include-group = "pins" }
]
lint = [
    "ruff==0.13.1",
    "pre-commit==3.8.0",
    "shandy-sqlfmt[jinjafmt]==0.27.0",
]
pins = [
    "flask_limiter>3,<4,!=3.13", # temporarily due to https://github.com/alisaifee/flask-limiter/issues/479
]

[project.optional-dependencies]
mcd = [
    "airflow-mcd>=0.3.3,<0.4.0",
    "pycarlo>=0.9",
    "setuptools",
]
tableau = [
    "tableauserverclient>=0.25.0,<0.26.0"
]
all = [
    "dbt-af[mcd]",
    "dbt-af[tableau]"
]

[project.scripts]
dbt-af-manifest-tests = "dbt_af_functional_tests:cli"
mini_dbt_project_generator = "scripts.mini_dbt_project_generator:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
    "/dbt_af",
    "/dbt_af_functional_tests",
    "/scripts",
]

[tool.ruff]
# https://beta.ruff.rs/docs
line-length = 120
lint.select = [
    # https://beta.ruff.rs/docs/rules
    "F", # pyflakes
    "E", # pycodestyle (errors)
    "W", # pycodestyle (warnings) eg. trailing/leading whitespaces
    "Q", # quotes
    "I001", # unsorted imports (isort)
    "TID", # tidy-imports
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
# https://beta.ruff.rs/docs/settings/#isort

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
